# kglite

./: .gitignore  CHANGELOG.md  CYPHER.md  Cargo.toml  deny.toml  kglite.h  pyproject.toml  stubtest_allowlist.txt
.github/workflows/: ci.yml
benches/: graph_benchmarks.rs
dev/bench/: data.js
dev/bench/rust/: data.js
docs/: core-concepts.md  index.md
docs/explanation/: design-decisions.md
docs/guides/: cypher.md  import-export.md
kglite/: __init__.pyi
src/: ffi.rs  lib.rs
src/datatypes/: mod.rs  py_out.rs  values.rs
src/graph/: calculations.rs  column_store.rs  data_retrieval.rs  export.rs  graph_algorithms.rs  introspection.rs  io_operations.rs  lookups.rs  maintain_graph.rs  mod.rs  pattern_matching.rs  pymethods_export.rs  pymethods_indexes.rs  reporting.rs  schema.rs  schema_validation.rs  statistics_methods.rs  subgraph.rs  temporal.rs  traversal_methods.rs  value_operations.rs
src/graph/cypher/: ast.rs  executor.rs  mod.rs  parser.rs  planner.rs  result.rs  result_view.rs  tokenizer.rs  window.rs
tests/: test_adminer_queries.py  test_count_distinct.py  test_cypher.py  test_multi_label.py  test_shortest_path_cypher.py
