[package]
name = "kglite"
version = "0.6.18"
edition = "2021"
authors = ["Kristian dF Kollsgård <kkollsg@gmail.com>"]
description = "A high-performance graph database with Python bindings written in Rust."
readme = "README.md"
repository = "https://github.com/kkollsga/kglite"
license = "MIT"

[lib]
name = "kglite"
crate-type = ["cdylib", "staticlib"]

[features]
# python: enables PyO3 bindings (default for maturin / pip builds)
default = ["python"]
python = ["dep:pyo3"]
# ffi: enables C-compatible extern "C" exports for Go CGO use
ffi = []

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "multiple-pymethods"], optional = true }
petgraph = { version = "0.8.3", features = ["serde-1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bincode = "1.3"
chrono = { version = "0.4.43", features = ["serde"] }
geo = "0.29"
wkt = "0.11"
regex = "1"
rayon = "1.10"
flate2 = "1"
zstd = "0.13"
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"